--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,5 @@
-# This is the list of Knative authors for copyright purposes.
+# This is the list of riff authors for copyright purposes.
 #
-# This does not necessarily list everyone who has contributed code, since in
-# some cases, their employer may be the copyright holder.  To see the full list
-# of contributors, see the revision history in source control.
-Google LLC
+# This does not necessarily list everyone who has contributed code.
+# To see the full list of contributors, see the revision history in source control.
 Pivotal Software, Inc.
-IBM Corp
-Red Hat, Inc.
-Cisco Systems, Inc.
